# NetLabs

FindCopiesInLockalNet/: ClientServerIPv4.h  ClientServerIPv6.cpp
Lab1/: CMakeLists.txt  Client.cpp  Client.h  ClientServer.cpp  ClientServer.h  ClientServerIPv4.cpp  ClientServerIPv6.h  Server.cpp  Server.h  main.cpp
TCPFileTransfer/: settings.gradle
TCPFileTransfer/src/main/java/: Client.java  ClientHandler.java  Server.java
